fixes the broken layout of the users index page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,6 +2,7 @@ body.users {
   &.index {
     .user-box {
       margin-right: 10px;
+      width: 32.5%;
     }
   }
 }
